Optimizacion de menus, MenuItemHandler.java fue eliminada.