@@ -1,8 +1,8 @@
 package com.example.projectjavafx;
 
 import com.example.projectjavafx.menu.MenuInfo;
-import com.example.projectjavafx.menu.MenuItemHandler;
 import com.example.projectjavafx.menu.MyMenuBar;
+import com.example.projectjavafx.ventanas.VentanaRegistroController;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
@@ -11,13 +11,13 @@ import javafx.scene.control.ButtonType;
 import javafx.stage.Stage;
 
 import java.io.IOException;
+import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
 public class LoginScene {
     private final Stage stage;
-    private MyMenuBar myMenuBar;
     private LoginController loginController;
     private Scene scene;
 
@@ -54,7 +54,6 @@ public class LoginScene {
 
     public void show() {
         createMyMenuBar();
-        loginController.init(myMenuBar);
         stage.setScene(scene);
         stage.show();
     }
@@ -62,9 +61,26 @@ public class LoginScene {
     private void createMyMenuBar() {
         List<MenuInfo> menus = new ArrayList<>();
         menus.add(new MenuInfo("File", Arrays.asList("Register", "Logout")));
-        menus.add(new MenuInfo("Help", List.of("About")));
-        myMenuBar = new MyMenuBar(menus);
-        MenuItemHandler menuItemHandler = new MenuItemHandler();
-        myMenuBar.setEventHandler(menuItemHandler);
+        menus.add(new MenuInfo("Help", Arrays.asList("About")));
+        MyMenuBar myMenuBar = new MyMenuBar(menus);
+        myMenuBar.setAction("Register", () -> {
+            try {
+                new VentanaRegistroController();
+            } catch (SQLException e) {
+                throw new RuntimeException(e);
+            }
+        });
+        myMenuBar.setAction("Logout", () -> {
+            if (Session.getInstance().checkIsActive(Session.getInstance().getUsername())) {
+                Session.getInstance().logout();
+                System.out.println("Logout");
+            } else System.out.println("No es posible cerrar sesion si no esta activo");
+        });
+        myMenuBar.setAction("About", () -> {
+            System.out.println("About no implementado");
+        });
+
+        loginController.init(myMenuBar);
     }
+
 }
